tests/errors/undefined-variable-2.ink
// @test error

fn main() : int
{
    int y = x;
    int x = 2;
    return 4;
}
